...
                        .accessibilityIdentifier("debug-reset-sync")
                    } header: {
                        Text(verbatim: "Debug")
                    }
                #endif
            }
            .navigationTitle(Text("Settings"))
            .toolbar {
                ToolbarItem(placement: .confirmationAction) {
                    Button("Done") { dismiss() }
                }
            }
            .fileExporter(
...
